<resources>
    <string name="app_name">Home Manager</string>

    <!-- activity_main -->
    <string name="temperature">Temperature:</string>
    <string name="temperature_val">--</string>
    <string name="celsius_unit">\u2103</string>
    <string name="kelvin_unit">\u212A</string>
    <string name="fahrenheit_unit">\u2109</string>
    <string name="humidity">Humidity:</string>
    <string name="humidity_val">--</string>
    <string name="measurement_date">Date:</string>
    <string name="measurement_date_val">YYYY-MM-DD HH:MM:SS</string>
    <string name="update_button_text">Update</string>

    <!-- activity_settings -->
    <string name="settings">Settings</string>
    <string name="server_ip">IP address</string>
    <string name="server_port">Port number</string>
    <string name="server_ip_dialog_title">Server IP</string>
    <string name="server_port_dialog_title">Server port</string>
    <string name="settings_title_server">Server</string>

    <string name="settings_title_units">Units</string>
    <string name="pref_title_temperature">Temperature unit</string>

</resources>
